# truthteller-ai

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  release-body.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: attachments.rs  config.rs  contract.rs  council.rs  errors.rs  lib.rs  migrate.rs  openrouter.rs  storage.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  routes.rs  sse.rs  state.rs
docs/: README.md  architecture.md  development.md  getting-started.md  testing-and-release.md
docs/releases/: AGENTS.md  v0.3.0.md  v0.3.1.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.jsx  layout.tsx  page.jsx
frontend/src/components/: App.css  App.jsx  App.test.tsx  App.tsx  ChatInterface.css  ChatInterface.jsx  ChatInterface.test.tsx  ChatInterface.tsx  CouncilInsights.css  CouncilInsights.jsx  CouncilInsights.test.tsx  CouncilInsights.tsx  ModelStatusBadges.css  ModelStatusBadges.tsx  Settings.css  Settings.jsx  Settings.test.tsx  Settings.tsx  Sidebar.css  Sidebar.jsx  Sidebar.test.tsx  Sidebar.tsx  Stage1.css  Stage1.jsx  Stage1.test.tsx  Stage1.tsx  Stage2.css  Stage2.test.tsx  Stage2.tsx  Stage3.css  Stage3.jsx  Stage3.test.tsx  Stage3.tsx
frontend/src/lib/: logger.js  logger.ts  transport.js  transport.test.ts  transport.ts
frontend/src/types/: api.ts  events.ts
frontend/src/utils/: insights.js  insights.test.ts  insights.ts
releases/: AGENTS.md
scripts/: ci.sh  clean.sh  coverage.sh  prereqs.sh  release-metadata.sh  release.sh  version.sh
