[package]
name = "t2ai-tauri"
version = "0.2.2"
edition = "2021"

[dependencies]
t2ai-core = { path = "../crates/core" }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "t2ai_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]
