[package]
name = "t2ai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
futures = "0.3"
pdf-extract = "0.7"
zip = "2"
quick-xml = "0.37"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
