[package]
name = "t2ai-server"
version = "0.3.0"
edition = "2021"

[dependencies]
t2ai-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
